# html-dom-visualize

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
html_dom_visualize/: __init__.py  main.py  visualizer.py
src/html_dom_visualize/: __init__.py  main.py
