[tool.poetry]
name = "html-dom-visualize"
version = "0.2.7"
description = "A simple HTML to Tree Diagram library that outputs HTML DOM as image for visualization."
authors = ["lokwkin <lokwkin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "html_dom_visualize"}]
homepage = "https://github.com/lokwkin/html-dom-visualize"
repository = "https://github.com/lokwkin/html-dom-visualize"
keywords = ["dom", "html", "visualization", "tree", "diagram", "html-dom-visualize"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
plotly = "5.22.0"
requests = "^2.32.3"
kaleido = "0.2.1"
pytest = "^8.3.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
html-dom-visualize = "html_dom_visualize.main:main"
